from dataclasses import dataclass
import enafood.entidades.localizacao as loc

@dataclass
class Bairro:
    nome:str
    cidade:any
