from dataclasses import dataclass

@dataclass
class Entrega:
    entregador:any
    pedido:any
    avaliacao:any