from dataclasses import dataclass


@dataclass
class Entregador:
    nome: str
    foto: any
