from dataclasses import dataclass

@dataclass
class Menu:
    categoria: str
    fornecedor: any
