from enum import Enum

class StatusPedido(Enum):
    EM_COMPRA = 0
    EM_CONFERENCIA = 1
    EM_PAGAMENTO = 2
    CARTAO_INVALIDO = 3
    CARTAO_VALIDO = 4
    CARTAO_ATIVO = 5
    CARTAO_INATIVO = 6
    PAGAMENTO_APROVADO = 7
    AGUARDANDO_ENTREGA = 8
    NO_CAMINHO_PARA_ENTREGA = 9
    ENTREGA_REALIZADA = 10
