@startuml
class Produto{
    - nome: String
    - descricao: String
    - foto:Foto
    - preco_unitário:Float
    - versão:Int
    - data_ultima_alteração:Date

}

class Cliente{
    - nome de usuário: String
}

class Endereço {
    - rua: String
    - número: Int
    - bairro: Bairro
    - cidade: Cidade
    - estado: UF
    - cep: String
    - complemento:String
}

class UF {
    - sigla: String
    - nome: String
}

class Cidade{
    - nome: String
}

enum StatusPedido {
   - status
}

class Bairro {
    - nome: String
}

class Menu{
  - categoria:Categoria
}

class Entregador{
  - nome:String
  - foto:Foto
}

class Fornecedor{
  - nome:String
  + calcular_avaliação()
}


abstract class Pagamento{
  + realizar_pagamento()
}

class Cartao{
    - numero:String
    - nome_do_titular:String
    - data_de_validade:Date
    - cvv:Int
}

class Cupom {
    - numero_cupom:String
}

class CartaoCredito{
}

class CartaoDebito {
}

class ValeRefeicao{
}

class ValeAlimentacao{
}

class Pedido{
  - data:Date
  - valor_entrega:Float
  - status:StatusPedido
  + calcular_valor_total()

}

class HistóricoDoPedido {
  - data:Date
  - evento:String
}

class Entrega{

}

class ProdutoNoPedido {
  - quantidade:Int

  + calcular_valor_total()
  
}

class Avaliação {
  - nota :Int
  - descrição:String
}

UF *-- "*" Cidade 
Cidade *-- "*" Bairro
Cliente "1" -- "1..*" Endereço
Cliente "1" -- "1" Endereço : padrão
Cliente "1" -- "1..*" Pedido
Entrega "1" -- "1" Pedido
Endereço "1" -- "1" Pedido: endereço_entrega
Entregador "1" -- "0..*" Entrega
Pedido "1" -- "1" Pagamento
Menu  "1" -- "*" Produto
Fornecedor "1" -- "1..*" Menu
Entrega "1" -- "1" Avaliação
Fornecedor "1" -- "0..*" Avaliação
Pedido *-- HistóricoDoPedido
Produto "1..*" -- "0..*" Pedido
(Produto, Pedido) .. ProdutoNoPedido
Pagamento <|-- Cartao
Cartao <|-- CartaoCredito
Cartao <|-- CartaoDebito
Cartao <|-- ValeRefeicao
Cartao <|-- ValeAlimentacao
Pagamento <|-- Cupom

note "O menu sempre estará associado \nà última versão do produto." as N1
Produto .. N1
N1 .. Menu

note "Sempre estará associado \nà versão do produto no momento do pedido." as N2
N2 .. ProdutoNoPedido
@enduml